[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-primebds"
version = "2.0.0"
description = "An essentials plugin for diagnostics, stability, and quality of life on Minecraft Bedrock Edition."
author = "PrimeStrat"

[project.entry-points."endstone"]
primebds = "endstone_primebds:PrimeBDS"

